# VeritaAI-take-home-clean

./: .gitignore  README.md  WRITEUP.md  demo.py  pyproject.toml
output/: __init__.py  environment.py
src/marketcanvas/: __init__.py  actions.py  canvas.py  contrast.py  elements.py  environment.py  mcp_server.py  prompt_parser.py  renderer.py  reward.py  spatial.py
src/marketcanvas_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_env.py
